welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: not found: value n
  n=a+b
  ^sumDouble:3: error: not found: value n
  if (n==a+a){
      ^sumDouble:4: error: not found: value n
    n=n+n
    ^sumDouble:5: error: not found: value n
    return n
           ^sumDouble:7: error: not found: value n
    return n
           ^