welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
  n=a+b
  if (n==a+a){
    n=n+n
    return n
  } else {
    return n
  }
}